gcc/ 	PR bootstrap/61583 	* tree-vrp.c (remove_range_assertions): Do not set is_unreachable 	to zero on debug statements. gcc/testsuite/ 	* gcc.dg/pr61583.c: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@211897 138bc75d-0d04-0410-961f-82ee72b054a4